[feat] (ENG-210): Prevent horizontal overflow in input choice set

--- a/src/modules/base/inputChoiceSet/inputChoiceSet.css
+++ b/src/modules/base/inputChoiceSet/inputChoiceSet.css
@@ -2,6 +2,10 @@
     display: block;
 }
 
+.avonni-input-choice-set__fieldset {
+    min-width: 0;
+}
+
 .avonni-input-choice-set__option-label {
     cursor: pointer;
 }
